[metadata]
name = datasetsanity
version = 0.0.1
author = Riduan Aziz
author_email = riduan.aziz46@gmail.com
description = Sanity checks for ML datasets: missing values, class imbalance, and data leakage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RiduanAziz/DataSetSanity-PyPi-Package
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8,<3.10
install_requires = 
    pandas>=1.3.0,<2.0.0
    numpy>=1.21.0,<2.0.0
    scikit-learn>=1.0.0,<1.2.0
    click>=8.0.0,<9.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    datasetsanity = datasetsanity.cli:main

[options.extras_require]
dev =
    pytest==6.2.5
    pytest-cov==3.0.0
    tox==3.25.1
    flake8==5.0.4
    black==22.12.0
    isort>=5.10.1,<6.0.0
    mypy==0.991
    types-requests==2.31.0
    build==0.10.0
    twine==4.0.2
    setuptools==65.5.0
    wheel==0.37.1
    pre-commit==2.20.0
    jupyterlab==3.6.3
    coverage==6.5.0

ml =
    pandas>=1.3.0
    numpy>=1.21.0
    scikit-learn>=1.0.0

testing =
    pytest>=7.2.0
    pytest-cov>=4.0.0
    
[options.package_data]
datasetsanity = py.typed

[flake8]
max-line-length = 160
extend-ignore = E203, W503
exclude = __init__.py

